Fixed reason for layout breaking (html wasn't full-sized)

--- a/app/styles/app.styles.css
+++ b/app/styles/app.styles.css
@@ -1,3 +1,23 @@
+#app-html {
+	display: flex;
+	flex-direction: column;
+	align-content: stretch;
+	
+	height: 100%;
+	width: 100%;
+	
+	color: whitesmoke;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+#app-html > #route {
+	flex: 1;
+}
+
+/*app > * {
+	flex: 1
+}*/
+
 .relative {
 	position: relative;
 }
