--- a/app/styles/root-styles.css
+++ b/app/styles/root-styles.css
@@ -4,29 +4,13 @@
 	box-sizing: border-box;
 }
 
-body {
-	/*padding: 0 0 100px 0;*/
+html, body {
+	width: 100%;
+	height: 100%;
 	margin: 0;
-	background-color: #0E2D47;
-	
 	display: block;
-	
-	width: 100%;
-	height: 100%;
 }
 
-app {
-	display: flex;
-	flex-direction: column;
-	align-content: stretch;
-	
-	height: 100%;
-	width: 100%;
-	
-	color: whitesmoke;
-	font-family: Arial, Helvetica, sans-serif;
+body {
+	background-color: #0E2D47;
 }
-
-/*app > * {
-	flex: 1
-}*/
